[gd_scene load_steps=9 format=3 uid="uid://52aa3w84urtt"]

[ext_resource type="Script" uid="uid://cblhd5fdxcoo6" path="res://scenes/bird/bird.gd" id="1_1adtb"]
[ext_resource type="Texture2D" uid="uid://cxqqjmykltw55" path="res://assets/player/parrot.png" id="1_q0yii"]
[ext_resource type="Texture2D" uid="uid://b1vrqyloc5p7i" path="res://assets/items/arrow.png" id="2_jq81n"]
[ext_resource type="AudioStream" uid="uid://ciqorj6vrapg4" path="res://assets/audio/stretch2.ogg" id="3_1adtb"]
[ext_resource type="AudioStream" uid="uid://cy8cyqdt6ul8" path="res://assets/audio/catapult.ogg" id="4_1m27c"]
[ext_resource type="AudioStream" uid="uid://iyp38xcavt67" path="res://assets/audio/kick_wood.ogg" id="5_4juht"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jq81n"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_jq81n"]
radius = 19.0

[node name="Bird" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_jq81n")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_1adtb")

[node name="MainSprite" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_q0yii")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jq81n")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -99.0
offset_right = 182.0
offset_bottom = 168.0
scale = Vector2(0.16174212, 0.16174212)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "0000
0000"

[node name="ArrowSprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_jq81n")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1adtb")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1m27c")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4juht")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
